installdir = $(pkglibdir)/python/Screens

install_PYTHON = \
	AudioSelection.py ChannelSelection.py ClockDisplay.py ConfigMenu.py CopyFiles.py InfoBar.py \
	Menu.py	MessageBox.py Screen.py ServiceScan.py TimerEdit.py \
	MovieSelection.py Setup.py About.py HarddiskSetup.py FixedMenu.py \
	Satconfig.py ScanSetup.py NetworkSetup.py Ci.py TimerEntry.py Volume.py \
	EpgSelection.py EventView.py Mute.py Standby.py ServiceInfo.py BhAddons.py BhBlue.py BhDevice.py BhEI.py BhEpgPanel.py BhEpgSearch.py \
	InfoBarGenerics.py HelpMenu.py Wizard.py __init__.py BhFormat.py BhGreen.py BhHdd.py BhInadyn.py BhInfo.py BhInterface.py BhNet.py BhRed.py \
	Dish.py LanguageSelection.py StartWizard.py PiPSetup.py BhScript.py BhSettings.py BhSwap.py BhUtils.py \
	PluginBrowser.py MinuteInput.py Scart.py PVRState.py \
	Console.py InputBox.py ChoiceBox.py SimpleSummary.py \
	TimerSelection.py PictureInPicture.py TimeDateInput.py \
	SubtitleDisplay.py SubservicesQuickzap.py ParentalControlSetup.py NumericalTextInputHelpDialog.py \
	SleepTimerEdit.py Ipkg.py RdsDisplay.py Globals.py \
	SessionGlobals.py LocationBox.py WizardLanguage.py TaskView.py Rc.py VirtualKeyBoard.py \
	TextBox.py FactoryReset.py RecordPaths.py UnhandledKey.py ServiceStopScreen.py \
	InputDeviceSetup.py DVD.py SoftwareUpdate.py AutoDiseqc.py InstallWizard.py ScreenSaver.py \
	Hotkey.py StreamingClientsInfo.py
